--- a/node-sdk/package.json
+++ b/node-sdk/package.json
@@ -8,5 +8,10 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^10.1.0",
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3"
   }
 }
