inbounds and parsing

--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,8 @@
     "@types/bun": "latest",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
+    "@types/email-reply-parser": "^1.4.2",
+    "@types/mailparser": "^3.4.6",
     "@types/passport": "^1.0.17",
     "@types/passport-http-bearer": "^1.0.42"
   },
@@ -22,8 +24,10 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
+    "email-reply-parser": "^2.1.0",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
+    "mailparser": "^3.9.0",
     "mongoose": "^8.19.2",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1"
