--- a/landing/content/3.blog.yml
+++ b/landing/content/3.blog.yml
@@ -1,3 +1,3 @@
 title: Blog
-description: Discover the latest insights, tutorials, and updates from our team. Stay informed about web development trends, best practices, and innovative solutions.
+description: Insights on building AI agents, email infrastructure best practices, integration tutorials, and the latest updates from the Sendook team.
 navigation.icon: i-lucide-newspaper
