--- a/landing/content/4.changelog.yml
+++ b/landing/content/4.changelog.yml
@@ -1,2 +1,3 @@
 title: Changelog
+description: Track the evolution of Sendook - new features, improvements, and updates to help your AI agents communicate better.
 navigation.icon: i-lucide-rocket
