--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "@types/cors": "^2.8.19",
     "@types/email-reply-parser": "^1.4.2",
     "@types/mailparser": "^3.4.6",
+    "@types/nodemailer": "^7.0.3",
     "@types/passport": "^1.0.17",
     "@types/passport-http-bearer": "^1.0.42"
   },
@@ -27,10 +28,13 @@
     "email-reply-parser": "^2.1.0",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
+    "ioredis": "^5.8.2",
     "mailparser": "^3.9.0",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "rate-limit-redis": "^4.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
