--- a/node-sdk/package.json
+++ b/node-sdk/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "node-sdk",
+  "name": "@sendook/node",
+  "version": "0.2.0",
   "module": "index.ts",
   "type": "module",
-  "private": true,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
