--- a/app/package.json
+++ b/app/package.json
@@ -19,13 +19,13 @@
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
+    "tailwindcss": "3.4.14",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "3.4.14"
+    "postcss": "^8.5.6"
   }
 }
