--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6"
   }
