--- a/landing/content/0.index.yml
+++ b/landing/content/0.index.yml
@@ -1,4 +1,4 @@
-title: Email Infrastructure for [AI Agents]{class="text-primary"}
+title: Free Email Infrastructure for [AI Agents]{class="text-primary"}
 description: Create inboxes and receive emails with webhooks. Get pre-decoded JSON responses. Built for developers who want to go fast.
 seo:
   title: Sendook - Email Infrastructure for AI Agents
